workspaces/diff-engine/src/learn_shape/snapshots/optic_diff_engine__learn_shape__result__test__trail_observations_can_generate_commands_for_nullable_bodies__only_null_results.snap
---
source: workspaces/diff-engine/src/learn_shape/result.rs
expression: "&only_null_results"
---
(
    Some(
        "test-id-16",
    ),
    [
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-15",
                    base_shape_id: "$unknown",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            AddShape(
                AddShape {
                    shape_id: "test-id-16",
                    base_shape_id: "$nullable",
                    name: "",
                },
            ),
        ),
        ShapeCommand(
            SetParameterShape(
                SetParameterShape {
                    shape_descriptor: ProviderInShape(
                        ProviderInShape {
                            shape_id: "test-id-16",
                            provider_descriptor: ShapeProvider(
                                ShapeProvider {
                                    shape_id: "test-id-15",
                                },
                            ),
                            consuming_parameter_id: "$nullableInner",
                        },
                    ),
                },
            ),
        ),
    ],
)
